--- a/Junk Drawer/View/Base.lproj/Main.storyboard
+++ b/Junk Drawer/View/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                     <connections>
                         <outlet property="emailTextField" destination="x5n-6I-u4D" id="FHP-yz-lF7"/>
                         <outlet property="passwordTextField" destination="miU-su-Fj7" id="Nd3-eD-uDW"/>
-                        <segue destination="lqX-7P-yEh" kind="show" identifier="goToHome" id="6xJ-Hy-Vy5"/>
+                        <segue destination="78Z-KY-og0" kind="show" identifier="goToHome" id="WfX-sM-CfY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A8o-5b-oCL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -193,47 +193,74 @@
             </objects>
             <point key="canvasLocation" x="3848.8000000000002" y="987.25637181409309"/>
         </scene>
-        <!--Home (Categories)-->
-        <scene sceneID="2VZ-xa-YKg">
+        <!--Home-->
+        <scene sceneID="2p8-y9-qGs">
             <objects>
-                <tableViewController title="Home (Categories)" id="lqX-7P-yEh" customClass="HomeVC" customModule="Junk_Drawer" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lmg-7Y-UbU">
+                <collectionViewController title="Home" id="78Z-KY-og0" customClass="HomeVC" customModule="Junk_Drawer" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="nEv-A3-Obz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="aUL-Rs-JuQ" customClass="SwipeTableViewCell" customModule="SwipeCellKit">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aUL-Rs-JuQ" id="90r-9V-I2T">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MFz-GL-MAC">
+                            <size key="itemSize" width="158" height="160"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="kjA-BF-R9q" customClass="CollectionViewCell" customModule="Junk_Drawer" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="158" height="160"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="158" height="160"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <sections/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NPy-KV-RKI">
+                                            <rect key="frame" x="0.0" y="34" width="158" height="126"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JX2-BG-vwp">
+                                            <rect key="frame" x="0.0" y="6" width="158" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" name="customBlack"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="NPy-KV-RKI" firstAttribute="top" secondItem="JX2-BG-vwp" secondAttribute="bottom" constant="7" id="DqN-IS-q4U"/>
+                                    <constraint firstAttribute="trailing" secondItem="JX2-BG-vwp" secondAttribute="trailing" id="I0v-GX-fIY"/>
+                                    <constraint firstAttribute="bottom" secondItem="NPy-KV-RKI" secondAttribute="bottom" id="WuT-w2-TXz"/>
+                                    <constraint firstItem="NPy-KV-RKI" firstAttribute="leading" secondItem="kjA-BF-R9q" secondAttribute="leading" id="ZA4-IZ-i9k"/>
+                                    <constraint firstItem="JX2-BG-vwp" firstAttribute="top" secondItem="kjA-BF-R9q" secondAttribute="top" constant="6" id="bKU-5z-2LK"/>
+                                    <constraint firstItem="JX2-BG-vwp" firstAttribute="leading" secondItem="kjA-BF-R9q" secondAttribute="leading" id="bLX-KV-mVq"/>
+                                    <constraint firstAttribute="trailing" secondItem="NPy-KV-RKI" secondAttribute="trailing" id="x2M-Xq-xyp"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="categoryImage" destination="NPy-KV-RKI" id="2uO-tY-x1H"/>
+                                    <outlet property="categoryLabel" destination="JX2-BG-vwp" id="dBK-JC-7f6"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
                         <connections>
-                            <outlet property="dataSource" destination="lqX-7P-yEh" id="CFF-5H-FZ7"/>
-                            <outlet property="delegate" destination="lqX-7P-yEh" id="rpW-EO-cET"/>
+                            <outlet property="dataSource" destination="78Z-KY-og0" id="nqY-0p-lrA"/>
+                            <outlet property="delegate" destination="78Z-KY-og0" id="i9C-ZH-YKy"/>
                         </connections>
-                    </tableView>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="My Garage" id="1Md-q3-lRL">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="IZb-is-37G">
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Categories" id="92J-Jg-fPf">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="VBi-HW-uTD">
                             <connections>
-                                <action selector="addButtonPressed:" destination="lqX-7P-yEh" id="cgU-lf-78y"/>
+                                <action selector="addButtonPressed:" destination="78Z-KY-og0" id="rbe-i4-daK"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <segue destination="GK2-1Y-L36" kind="show" identifier="goToDrawer" id="gDL-Gj-chV"/>
-                        <segue destination="6pr-KE-1Ul" kind="show" identifier="goToEditCategory" id="2cn-w7-tIF"/>
+                        <segue destination="GK2-1Y-L36" kind="show" identifier="goToDrawer" id="P93-u1-Ity"/>
+                        <segue destination="6pr-KE-1Ul" kind="show" identifier="goToEditCategory" id="rnv-b0-P9K"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2cq-Xr-PQD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lj6-Kg-M93" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3850" y="148"/>
+            <point key="canvasLocation" x="3848.8000000000002" y="133.5832083958021"/>
         </scene>
         <!--Drawer-->
         <scene sceneID="ShU-5A-i32">
@@ -259,7 +286,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="mgK-Px-Uc7">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="Vhp-LS-f8d">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Vhp-LS-f8d">
                             <connections>
                                 <action selector="addButtonPressed:" destination="GK2-1Y-L36" id="vvV-9M-5Ot"/>
                             </connections>
@@ -268,7 +295,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cKp-Zy-jQH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4778" y="148"/>
+            <point key="canvasLocation" x="4951" y="134"/>
         </scene>
         <!--Log In-->
         <scene sceneID="NV5-uO-zaA">
@@ -320,12 +347,12 @@
                     <connections>
                         <outlet property="emailTextField" destination="olC-ad-QXA" id="oQF-Tb-ziI"/>
                         <outlet property="passwordTextField" destination="rUl-Le-rsV" id="pQu-P6-JYi"/>
-                        <segue destination="lqX-7P-yEh" kind="show" identifier="goToHome" id="QW7-eO-hAl"/>
+                        <segue destination="78Z-KY-og0" kind="show" identifier="goToHome" id="zhc-Wz-oiU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nNr-Y5-OCW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2924" y="-236.13193403298354"/>
+            <point key="canvasLocation" x="2924" y="-217"/>
         </scene>
         <!--Navigation-->
         <scene sceneID="0VY-jc-VKt">
@@ -362,6 +389,6 @@
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="QW7-eO-hAl"/>
+        <segue reference="zhc-Wz-oiU"/>
     </inferredMetricsTieBreakers>
 </document>
